--- a/style/style.css
+++ b/style/style.css
@@ -38,8 +38,7 @@
     }
 
     /* ===== HERO SECTION ===== */
-    header {
-      background: url('/imagens/pedra-cume.jpg') center/cover no-repeat;
+    div {
        background-position: center;
       background-size: cover;
       background-attachment: fixed;
