--- a/style/style.css
+++ b/style/style.css
@@ -38,7 +38,7 @@
     }
 
     /* ===== HERO SECTION ===== */
-    div {
+    header {
        background-position: center;
       background-size: cover;
       background-attachment: fixed;
