--- a/style/style.css
+++ b/style/style.css
@@ -39,7 +39,7 @@
 
     /* ===== HERO SECTION ===== */
     header {
-      background: url(/imagens/pedra-cume.jpg) center/cover no-repeat;
+      background: url('/imagens/pedra-cume.jpg') center/cover no-repeat;
        background-position: center;
       background-size: cover;
       background-attachment: fixed;
@@ -200,11 +200,6 @@
       background: #3084F2;
     }
 
-    @media (max-width: 768px) {
-      .contact {
-        grid-template-columns: 1fr;
-      }
-    }
 
     /* ===== FOOTER ===== */
     footer {
