--- a/style/media.css
+++ b/style/media.css
@@ -1,4 +1,12 @@
-    @media screen and (min-width: 780px) and (max-width: 992px) {
+   
+    @media (max-width: 768px) {
+      .contact {
+        grid-template-columns: 1fr;
+      }
+    }
+   
+   
+   @media screen and (min-width: 780px) and (max-width: 992px) {
     body{
       font-family: 'Montserrat', sans-serif;
       line-height: 1.6;
