--- a/style/style.css
+++ b/style/style.css
@@ -39,8 +39,9 @@
 
     /* ===== HERO SECTION ===== */
     header {
-      background: url('/imagens/pedra-cume.jpg') center/cover no-repeat;
-       background-position: center;
+      background: url('/imagens/pedra-cume.jpg');
+      background-position: center;
+      background-repeat: ;
       background-size: cover;
       background-attachment: fixed;
       height: 100vh; 
