--- a/style/style.css
+++ b/style/style.css
@@ -39,9 +39,9 @@
 
     /* ===== HERO SECTION ===== */
     header {
-      background: url('/imagens/pedra-cume.jpg');
+      background: url('../imagens/pedra-cume.jpg');
       background-position: center;
-      background-repeat: ;
+      background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
       height: 100vh; 
