--- a/style/style.css
+++ b/style/style.css
@@ -45,13 +45,13 @@
       background-size: cover;
       background-attachment: fixed;
       height: 100vh; 
-      height: 90vh;
-      display: flex;
+      height: 90vh;   display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
       color: white;
+   
     }
 
     header::before {
