--- a/style/style.css
+++ b/style/style.css
@@ -39,7 +39,7 @@
 
     /* ===== HERO SECTION ===== */
     header {
-      background: url('../imagens/pedra-cume.jpg');
+      background: url('https://isishao3024n.github.io/site-de-extrema/imagens/pedra-cume.jpg');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
