--- a/style/media.css
+++ b/style/media.css
@@ -4,7 +4,7 @@
         grid-template-columns: 1fr;
       }    form {
       display: flex;
-      flex-direction: column;
+      flex-direction: column-reverse;
     }
 
     form input,
