--- a/style/media.css
+++ b/style/media.css
@@ -1,17 +1,42 @@
    
     @media (max-width: 768px) {
+      .contato{
+        display: flex;
+        flex-flow: row-reverse;
+      }
       .contact {
         grid-template-columns: 1fr;
-      }    form {
+      }    
+      .contact {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+      align-items: center;
+    }
+
+    .contact-info {
+      font-size: 11px;
+    }
+
+    .contact-info p {
+      margin: 10px 0;
+    }
+
+    .contact-info i {
+      color: #3084F2;
+      margin-right: 10px;
+    }
+      
+      form {
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
     }
 
     form input,
     form textarea,
     form button {
       margin-bottom: 10px;
-      padding: 10px;
+      padding: 8px;
       font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 8px;
@@ -19,7 +44,7 @@
 
     form textarea {
       resize: none;
-      height: 100px;
+      height: 50px;
     }
 
     form button {
