--- a/style/style.css
+++ b/style/style.css
@@ -247,3 +247,11 @@
       width: 100%;
       height: 250px;
     }
+    @media (max-width: 600px){
+      .carousel{
+        height: auto;
+        max-height: 250px;
+        width: 100%;
+        object-fit: cover;
+      }
+    }
